 ** Rewrote (but mostly just refactored) event configuration code.
 ** The [Opacity] tag should now properly return a number instead of a boolean.
 ** Added Mind Quickening to the IncreasedSpellHaste equivalency
 ** Fixed [string "ConditionEvents_SPELLCHARGETIME"] line 3: attempt to call global 'GetSpellCharges' (a nil value)
 
===v6.1.1===
 * Added a new text output handler for the Instance channel, and updated existing chat output methods for this channel.
 * Bug Fixes:
 ** Fixed error Interface\AddOns\TellMeWhen\TellMeWhen.lua:155: table index is nil
 
===v6.1.0===
 * New icon display method: Bars.
 * New icon type: Loss of Control (WoW 5.1+ only)
 * You may notice some slight changes to the way your text layouts appear, especially if you used the Constrain Width setting. You will have to re-adjust your old layouts to achieve old functionality, which will probably require adding a second anchor to any affected text displays.
 * New group option: Group Opacity.
 * New conditions: Buff/Debuff Duration Percentage.
 * The "Class Colored Names" setting was removed due to internal conflicts with DogTag and the implementation of this setting.
 * Bug Fixes:
 ** Conditions with minimum values less than zero should now allow for these values to be selected.
 ** The Show Timer Text option should now work properly with Tukui.
 ** You should no longer see an error randomly telling you that TMW can't do an action in combat when no action has been triggered.
 ** Logging in while in combat with Masque installed without the Allow Config in Combat option enabled should no longer leave icons in a mangled state.
 ** Logging in while in combat with the Allow Config in Combat option enabled should now have a much lower chance of triggering a 'script ran too long' error.
 ** Items whose cooldown durations are reported as being 0.001 seconds should no longer be treated as being usable.
 ** Added missing spells to the SpellDamageTaken equivalency