@@ -9,6 +9,8 @@
  ** The [Opacity] tag should now properly return a number instead of a boolean.
  ** Added Mind Quickening to the IncreasedSpellHaste equivalency
  ** Fixed [string "ConditionEvents_SPELLCHARGETIME"] line 3: attempt to call global 'GetSpellCharges' (a nil value)
+ ** The group Only show in combat setting is now handled by the group's event handlers to prevent Script ran too long errors (hopefully).
+ ** Invented a new method for moving the Icon Editor so that it won't jump around all over the place anymore.
  
 ===v6.1.1===
  * Added a new text output handler for the Instance channel, and updated existing chat output methods for this channel.
